--- a/views/video_play.html
+++ b/views/video_play.html
@@ -29,10 +29,10 @@
 	</head>
 
 	<body>
-		<div class="video-play">
-			<div class="vidoe-area">
+		<div>
+			<div>
 				<h2>影片名稱</h2>
-				<video controls id="v1">
+				<video controls width="560" id="v1">
 					<source src="../video/cctv_1.webm" type="video/webm">
 					<source src="../video/cctv_1.mp4" type="video/mp4">
 					您的瀏覽器不支援此格式播放。
